# loggyxp

./: Cargo.toml  README.md
docs/: architecture.md
src/: log_mgr.rs  main.rs  rust_server.rs
src/log_mgr/: log_context_data.rs  log_filtering.rs  log_monitoring.rs  log_notification.rs  rust_server.rs  search_engine.rs
static/: dashboard.html
tests/: # LoggyXP Testing Guide.md  generator.sh
tests/logs_for_testing/: dummy_log1.txt  json1.json
